# car-scraping

./: .gitignore  main.py  pyproject.toml
car_scraping/: analizer.py  brand_analizer.py  car.py  data_analizer.py  scraper.py  utils.py
repository/: car_repository.py  db_connection.py  models.py  total_cars_repository.py
